--- a/Language_Translation.ipynb
+++ b/Language_Translation.ipynb
@@ -27,8 +27,8 @@
     "import helper\n",
     "import problem_unittests as tests\n",
     "\n",
-    "source_path = 'data/translation_datasets/train.en'\n",
-    "target_path = 'data/translation_datasets/train.vi'\n",
+    "source_path = 'data/train.en'\n",
+    "target_path = 'data/train.vi'\n",
     "\n",
     "\n",
     "source_text = helper.load_data(source_path)\n",
@@ -227,6 +227,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 5, 12, 21, 22, 23, 24, 25, 26, 27, 11, 28, 29, 30, 4, 5, 31, 32, 6, 7, 28, 9, 10, 33, 34, 11, 35, 36, 12, 13, 17, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 44, 8, 55, 56, 57]\n",
+      "[4, 5, 6, 7, 8, 9, 10, 11, 12, 1, 13, 14, 15, 16, 17, 18, 4, 5, 19, 10, 20, 21, 7, 22, 23, 24, 9, 7, 25, 26, 27, 11, 28, 16, 29, 30, 31, 32, 33, 21, 34, 35, 36, 32, 37, 10, 38, 39, 40, 7, 41, 13, 42, 21, 43, 27, 10, 44, 45, 46, 1, 47, 48, 49, 50, 51, 50, 52, 53, 54]\n",
+      "45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kathir's Version\n",
+    "from LT_bigdata import *\n",
+    "source_filename = 'data/train.vi'\n",
+    "target_filename = 'data/train.en'\n",
+    "(source_int_text, source_vocab_to_int), (target_int_text, target_vocab_to_int) = source_text_to_int(source_filename), target_text_to_int(target_filename)\n",
+    "print(source_int_text[:70])\n",
+    "print(target_int_text[:70])\n",
+    "print(target_vocab_to_int[\"molecule\"])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "deletable": true,
@@ -239,30 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9\n",
-      "\n",
-      "11\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(len(source_int_text[0]))\n",
-    "print()\n",
-    "print(len(target_int_text[0]))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": true,
